# ai-chat-bot

./: .env.prod.example  .gitignore  ANSWER_FORMAT_IMPROVEMENT.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY_V2.md  DEVELOPMENT.md  DOCUMENT_ANALYSIS_IMPROVEMENTS.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_HOTFIX_REPORT.md  FINAL_INTEGRATION_REPORT.md  FINAL_INTEGRATION_TEST_REPORT.md  FINAL_TEST_REPORT.md  FRONTEND_TEST_CHECKLIST.md  GPT4o_MINI_UPGRADE.md  IMPROVEMENTS.md  INTEGRATION_TEST_CHECKLIST.md  INTEGRATION_TEST_CHECKLIST_FINAL.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUMMARY.md  KNOWLEDGE_BASE_DEPLOYMENT.md  MARKDOWN_FIX_REPORT.md  MARKDOWN_RENDERING_REPORT.md  MS_AUTH_SETUP.md  PERFORMANCE_ANALYSIS_REPORT.md  PROJECT_SUMMARY.md  QA_FINAL_REPORT_KR.md  QA_TEST_REPORT.md  RAG_OPTIMIZATION_REPORT.md  README.md  SIDEBAR_REDESIGN_V3.1.md  SPEED_OPTIMIZATION_REPORT.md  STREAMING_IMPLEMENTATION_REPORT.md  STREAMING_TEST_GUIDE.md  SYSTEM_STARTUP_LOG.md  TEST_DASHBOARD.md  TEST_REPORT.md  TEST_SUMMARY.md  UI_UX_DEPLOYMENT_REPORT.md  UI_UX_IMPROVEMENTS.md  (+23 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  test_context_memory.py  test_markdown.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_user_and_user_id.py  002_add_user_id_columns.py  002_migrate_null_user_id_to_default.py  003_add_document_vector_ids.py  004_add_message_image_url.py
backend/app/: main.py
backend/app/core/: config.py  database.py  prompts.py  security.py
backend/tests/: conftest.py  test_api.py  test_chunking.py  test_document_processor.py
(+62 files in other folders)
