[tool.poetry]
name = "ai-chatbot-backend"
version = "0.1.0"
description = "AI Chatbot Backend with RAG capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-community = "^0.0.16"
chromadb = "^0.4.22"
openai = "^1.10.0"
pypdf = "^4.0.0"
python-docx = "^1.1.0"
markdown = "^3.5.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
celery = "^5.3.6"
tenacity = "^8.2.3"
tiktoken = "^0.5.2"
structlog = "^24.1.0"
duckduckgo-search = "^4.0.0"
msal = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
